# varie

./: CMakeLists.txt  README.md  crossArm.cmake  pul.bat
circo/: CMakeLists.txt  circo.c  circo.h  test.c
cld/: app_cld.c  cld.c  cld.h  cld_cfg_template.h  prm.c  prm.h
config/: eclipse.epf  preferenze.epf
crc/: crcmodel.c  crcmodel.h  indirizzo.txt
diario/: diario.c  diario.h  diario_cfg_template.h
doc/: collaudo.html  diagnosi.html  doc.html
fsm/: fsm.c  fsm.h  fsm_cfg_template.h
pyHub/: can.py  fpga.py  gui.tcl  rete.py  spi.py  tcan.py  uart.py
pyIarMem/: esame_map.py
pybase/: bottoni.py  dispo.py  dispositivo.py  eco.py  eli_cubo.py  esegui.py  gpio_cubo.py  gui.tcl  labelframe.py  main.py  pdc.py  prot.py  pul.bat  pylintrc  rccs.hid  tcp_eco.py  udp_eco.py  utili.py
ramtest/: test_tram.c  tram.cpp  tram.h
time2/: test.c  time2.c  time2.h
